--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div id="#top"></div>
     <section id="home">
         <div class="banner-container">
-            <img src="images/banner.jpg" alt="banner" />
+            <img src="banner.jpg" alt="banner" />
             <div class="container banner-content">
                 <div id="da-slider" class="da-slider">
                     <div class="da-slide">
@@ -285,10 +285,10 @@
 
                             <article class="col-sm-4 isotopeItem webdesign">
                                 <div class="portfolio-item">
-                                    <img src="images/portfolio/img1.jpg" alt="" />
+                                    <img src="img1.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/portfolio/img1.jpg" class="fancybox">
+                                            <a href="img1.jpg" class="fancybox">
                                                 <h5>Introduction to C</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
@@ -298,10 +298,10 @@
 
                             <article class="col-sm-4 isotopeItem photography">
                                 <div class="portfolio-item">
-                                    <img src="images/portfolio/img2.jpg" alt="" />
+                                    <img src="img2.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/portfolio/img2.jpg" class="fancybox">
+                                            <a href="img2.jpg" class="fancybox">
                                                 <h5>Basic Of C language</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
@@ -312,10 +312,10 @@
 
                             <article class="col-sm-4 isotopeItem photography">
                                 <div class="portfolio-item">
-                                    <img src="images/portfolio/img3.jpg" alt="" />
+                                    <img src="img3.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/portfolio/img3.jpg" class="fancybox">
+                                            <a href="img3.jpg" class="fancybox">
                                                 <h5>Basic of C/C++</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
@@ -325,10 +325,10 @@
 
                             <article class="col-sm-4 isotopeItem print">
                                 <div class="portfolio-item">
-                                    <img src="images/portfolio/img4.jpg" alt="" />
+                                    <img src="img4.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/portfolio/img4.jpg" class="fancybox">
+                                            <a href="img4.jpg" class="fancybox">
                                                 <h5>Introduction to HTML</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
@@ -338,10 +338,10 @@
 
                             <article class="col-sm-4 isotopeItem photography">
                                 <div class="portfolio-item">
-                                    <img src="images/portfolio/img5.jpg" alt="" />
+                                    <img src="img5.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/portfolio/img5.jpg" class="fancybox">
+                                            <a href="img5.jpg" class="fancybox">
                                                 <h5>Project Name</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
@@ -351,10 +351,10 @@
 
                             <article class="col-sm-4 isotopeItem webdesign">
                                 <div class="portfolio-item">
-                                    <img src="images/portfolio/img6.jpg" alt="" />
+                                    <img src="img6.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/portfolio/img6.jpg" class="fancybox">
+                                            <a href="img6.jpg" class="fancybox">
                                                 <h5>Project Name</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
@@ -364,10 +364,10 @@
 
                             <article class="col-sm-4 isotopeItem print">
                                 <div class="portfolio-item">
-                                    <img src="images/portfolio/img7.jpg" alt="" />
+                                    <img src="img7.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/portfolio/img7.jpg" class="fancybox">
+                                            <a href="img7.jpg" class="fancybox">
                                                 <h5>Project Name</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
@@ -377,10 +377,10 @@
 
                             <article class="col-sm-4 isotopeItem photography">
                                 <div class="portfolio-item">
-                                    <img src="images/portfolio/img8.jpg" alt="" />
+                                    <img src="img8.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/portfolio/img8.jpg" class="fancybox">
+                                            <a href="img8.jpg" class="fancybox">
                                                 <h5>Project Name</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
@@ -390,10 +390,10 @@
 
                             <article class="col-sm-4 isotopeItem print">
                                 <div class="portfolio-item">
-                                    <img src="images/portfolio/img9.jpg" alt="" />
+                                    <img src="img9.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/portfolio/img9.jpg" class="fancybox">
+                                            <a href="img9.jpg" class="fancybox">
                                                 <h5>Project Name</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
@@ -436,10 +436,10 @@
 
                             <article class="col-sm-4 isotopeItem webdesign">
                                 <div class="portfolio-item">
-                                    <img src="images/portfolio/img1.jpg" alt="" />
+                                    <img src="img1.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/portfolio/img1.jpg" class="fancybox">
+                                            <a href="img1.jpg" class="fancybox">
                                                 <h5>Project Name</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
@@ -449,10 +449,10 @@
 
                             <article class="col-sm-4 isotopeItem photography">
                                 <div class="portfolio-item">
-                                    <img src="images/portfolio/img2.jpg" alt="" />
+                                    <img src="img2.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/portfolio/img2.jpg" class="fancybox">
+                                            <a href="img2.jpg" class="fancybox">
                                                 <h5>Project Name</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
@@ -463,10 +463,10 @@
 
                             <article class="col-sm-4 isotopeItem photography">
                                 <div class="portfolio-item">
-                                    <img src="images/portfolio/img3.jpg" alt="" />
+                                    <img src="img3.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/portfolio/img3.jpg" class="fancybox">
+                                            <a href="img3.jpg" class="fancybox">
                                                 <h5>Project Name</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
@@ -476,10 +476,10 @@
 
                             <article class="col-sm-4 isotopeItem print">
                                 <div class="portfolio-item">
-                                    <img src="images/portfolio/img4.jpg" alt="" />
+                                    <img src="img4.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/portfolio/img4.jpg" class="fancybox">
+                                            <a href="img4.jpg" class="fancybox">
                                                 <h5>Project Name</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
@@ -489,10 +489,10 @@
 
                             <article class="col-sm-4 isotopeItem photography">
                                 <div class="portfolio-item">
-                                    <img src="images/portfolio/img5.jpg" alt="" />
+                                    <img src=".jpg" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/portfolio/img5.jpg" class="fancybox">
+                                            <a href="img5.jpg" class="fancybox">
                                                 <h5>Project Name</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
@@ -502,10 +502,10 @@
 
                             <article class="col-sm-4 isotopeItem webdesign">
                                 <div class="portfolio-item">
-                                    <img src="images/portfolio/img6.jpg" alt="" />
+                                    <img src=".jpg" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/portfolio/img6.jpg" class="fancybox">
+                                            <a href="img6.jpg" class="fancybox">
                                                 <h5>Project Name</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
@@ -515,10 +515,10 @@
 
                             <article class="col-sm-4 isotopeItem print">
                                 <div class="portfolio-item">
-                                    <img src="images/portfolio/img7.jpg" alt="" />
+                                    <img src="/img7.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/portfolio/img7.jpg" class="fancybox">
+                                            <a href="img7.jpg" class="fancybox">
                                                 <h5>Project Name</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
@@ -528,10 +528,10 @@
 
                             <article class="col-sm-4 isotopeItem photography">
                                 <div class="portfolio-item">
-                                    <img src="images/portfolio/img8.jpg" alt="" />
+                                    <img src="img8.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/portfolio/img8.jpg" class="fancybox">
+                                            <a href="img8.jpg" class="fancybox">
                                                 <h5>Project Name</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
@@ -541,10 +541,10 @@
 
                             <article class="col-sm-4 isotopeItem print">
                                 <div class="portfolio-item">
-                                    <img src="images/portfolio/img9.jpg" alt="" />
+                                    <img src="img9.jpg" alt="" />
                                     <div class="portfolio-desc align-center">
                                         <div class="folio-info">
-                                            <a href="images/portfolio/img9.jpg" class="fancybox">
+                                            <a href="img9.jpg" class="fancybox">
                                                 <h5>Project Name</h5>
                                                 <i class="fa fa-arrows-alt fa-2x"></i></a>
                                         </div>
